--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t alissonvisa/docker-react -f Dockerfile.docker.dev .
 
 script:
-  - docker run CI=true alissonvisa/docker-react npm run test
+  - docker run -e CI=true alissonvisa/docker-react npm run test
